--- a/src/modules/Base/editor.scss
+++ b/src/modules/Base/editor.scss
@@ -19,3 +19,7 @@
 .cm-lineNumbers .cm-gutterElement.cm-active {    
   color:  var(--interactive-accent) !important;
 }
+/*-ZWSP Highlight-*/
+.ͼ2 .cm-specialChar {
+  color: rgb(var(--ctp-red));
+}
