--- a/theme.css
+++ b/theme.css
@@ -1288,6 +1288,11 @@ body {
   color: var(--interactive-accent) !important;
 }
 
+/*-ZWSP Highlight-*/
+.ͼ2 .cm-specialChar {
+  color: rgb(var(--ctp-red));
+}
+
 /*----------FILE PREVIEW MARGINS--------------*/
 .anp-toggle-preview .markdown-preview-section {
   width: var(--anp-preview-width-pct);
