Add credits in code

--- a/src/modules/Callouts/main.scss
+++ b/src/modules/Callouts/main.scss
@@ -1,4 +1,8 @@
 /*----------------CALLOUTS-------------------*/
+/*------------------------------------------
+The Willemstad callout style was inspired by @tingmelvin's Willemstad theme: https://github.com/tingmelvin/willemstad-x
+None of the code was used, and the callout was written from scratch.
+-----------------------------------------*/
 .anp-callout-fold-position {
   --anp-callout-fold-position: 1;
 }
