--- a/src/modules/Features/colorful-frame.scss
+++ b/src/modules/Features/colorful-frame.scss
@@ -1,3 +1,8 @@
+/*---------------COLORFUL FRAME--------------*/
+/*----------------------------------
+This feature is inspired by Kepano's Minimal theme: https://github.com/kepano/obsidian-minimal
+None of the original code was used, and was written from scratch.
+----------------------------------*/
 .anp-colorful-frame.anuppuccin-accent-toggle:not(.anp-card-layout) .mod-top .workspace-tab-header-container,
 .anp-colorful-frame.anuppuccin-accent-toggle:not(.anp-card-layout) .workspace-ribbon.mod-left:before,
 .anp-colorful-frame.anuppuccin-accent-toggle.anp-card-layout,
