--- a/src/modules/Features/floating-title.scss
+++ b/src/modules/Features/floating-title.scss
@@ -1,3 +1,8 @@
+/*------------FLOATING VAULT TITLE-----------*/
+/*----------------------------------
+This feature is inspired by Cecilia May's Primary theme: https://github.com/ceciliamay/obsidianmd-theme-primary
+None of the original code was used and the feature was implemented from scratch.
+----------------------------------*/
 .anp-floating-header .nav-folder.mod-root > .nav-folder-title {
   background-color: var(--background-secondary);
   position: fixed;
