--- a/theme.css
+++ b/theme.css
@@ -1936,6 +1936,10 @@ hr {
 }
 
 /*----------------CALLOUTS-------------------*/
+/*------------------------------------------
+The Willemstad callout style was inspired by @tingmelvin's Willemstad theme: https://github.com/tingmelvin/willemstad-x
+None of the code was used, and the callout was written from scratch.
+-----------------------------------------*/
 .anp-callout-fold-position {
   --anp-callout-fold-position: 1;
 }
@@ -2177,6 +2181,11 @@ hr {
   background-color: rgba(var(--ctp-accent), 0.6);
 }
 
+/*---------------COLORFUL FRAME--------------*/
+/*----------------------------------
+This feature is inspired by Kepano's Minimal theme: https://github.com/kepano/obsidian-minimal
+None of the original code was used, and was written from scratch.
+----------------------------------*/
 .anp-colorful-frame.anuppuccin-accent-toggle:not(.anp-card-layout) .mod-top .workspace-tab-header-container,
 .anp-colorful-frame.anuppuccin-accent-toggle:not(.anp-card-layout) .workspace-ribbon.mod-left:before,
 .anp-colorful-frame.anuppuccin-accent-toggle.anp-card-layout,
@@ -2423,6 +2432,12 @@ body.anp-colorful-frame.anp-card-layout .workspace,
   border-radius: var(--radius-m);
 }
 
+/*------------CUSTOM CHECKBOXES-----------*/
+/*----------------------------------
+This feature is inspired by Cecilia May's Primary theme: https://github.com/ceciliamay/obsidianmd-theme-primary
+None of the original code was used and only the checkbox ideas were utilised.
+Icons were taken from Font Awesome: https://fontawesome.com/
+----------------------------------*/
 .anp-custom-checkboxes [data-task=x] input[type=checkbox]:checked, .anp-custom-checkboxes [data-task=x][type=checkbox]:checked {
   --checkbox-color: rgb(var(--ctp-green));
   --checkbox-color-hover: rgb(var(--ctp-green)) ;
@@ -2740,6 +2755,11 @@ body.anp-colorful-frame.anp-card-layout .workspace,
   background: linear-gradient(to left, rgba(var(--ctp-lavender), var(--anp-speech-bubble-opacity)), rgba(var(--ctp-mauve), var(--anp-speech-bubble-opacity)));
 }
 
+/*------------FLOATING VAULT TITLE-----------*/
+/*----------------------------------
+This feature is inspired by Cecilia May's Primary theme: https://github.com/ceciliamay/obsidianmd-theme-primary
+None of the original code was used and the feature was implemented from scratch.
+----------------------------------*/
 .anp-floating-header .nav-folder.mod-root > .nav-folder-title {
   background-color: var(--background-secondary);
   position: fixed;
