--- a/src/modules/Plugins/excalidraw.scss
+++ b/src/modules/Plugins/excalidraw.scss
@@ -7,7 +7,7 @@
     --button-gray-3: rgb(var(--ctp-crust));
     --button-special-active-bg-color: rgb(var(--ctp-base));
     --dialog-border-color: rgb(var(--ctp-surface1));
-    --focus-highlight-color: rgb(var(--ctp-accent, --ctp-teal));
+    --focus-highlight-color: rgb(var(--ctp-accent, var(--ctp-teal)));
     --icon-fill-color: var(--text-normal);
     --icon-green-fill-color: rgb(var(--ctp-green));
     --default-bg-color: rgb(var(--ctp-base));
@@ -44,4 +44,9 @@
 //Reset excalidraw title margins
 [data-type="excalidraw"] .view-header {
   margin: 0;
+}
+body .excalidraw .library-menu-items-container .library-actions--load {
+  &, &:hover {
+    background-color: var(--color-accent);
+  }
 }
