--- a/src/modules/Note/tables.scss
+++ b/src/modules/Note/tables.scss
@@ -1,12 +1,14 @@
 /*-Recolor table borders-*/
 .anp-table-toggle .markdown-rendered {
-  table {
-    background-color: rgba(var(--ctp-mantle), 0.5);
-  }
-  table, td, th , thead tr > th:first-child, thead tr > th, thead tr > th:last-child {
-    text-align: center;
-    border: 2px solid var(--table-border-color);
-  }
+    table, td, th , thead tr > th:first-child, thead tr > th, thead tr > th:last-child {
+        border: var(--anp-table-thickness, 2px) solid var(--table-border-color);
+    }
+    th , thead tr > th:first-child, thead tr > th, thead tr > th:last-child {
+        text-align: var(--anp-table-align-th, center);
+    }
+    td {
+        text-align: var(--anp-table-align-td, center);
+    }
 }
 //dataview table
 .anp-table-toggle {
@@ -14,15 +16,45 @@
     background-color: rgba(var(--ctp-surface1), 0.1) !important;
   }
 }
+.anp-table-toggle {
+    &.anp-th-highlight .markdown-rendered {
+        th {
+            background-color: rgba(var(--ctp-mantle), 0.5);
+        }
+    }
+    &.anp-td-alt-rows .markdown-rendered {
+        table tr:nth-child(2n) td {
+            background-color: rgba(var(--ctp-mantle), 0.5);
+        }
+    }
+    &.anp-td-alt-cols .markdown-rendered {
+        table tr td:nth-child(2n) {
+            background-color: rgba(var(--ctp-mantle), 0.5);
+        }
+    }
+    &.anp-td-checkered .markdown-rendered {
+        table tr td:nth-child(2n), table tr:nth-child(2n) td {
+            background-color: rgba(var(--ctp-mantle), 0.5);
+        }
+        table tr:nth-child(2n) td:nth-child(2n) {
+            background-color: rgba(var(--ctp-crust), 0.5);
+        }
+    }
+    &.anp-td-full .markdown-rendered {
+        table td {
+            background-color: rgba(var(--ctp-mantle), 0.5);
+        }
+    }
+}
 .anp-table-auto.markdown-rendered table {
-  margin: 0 auto;
+    margin: 0 auto;
 }
 .anp-table-width.markdown-rendered table {
     width: var(--anp-table-width-pct);
 }
-.anp-table-auto .markdown-rendered table {
-  margin: 0 auto;
+.anp-table-auto.anp-table-toggle .markdown-rendered table {
+    margin: 0 auto;
 }
-.anp-table-width .markdown-rendered table {
+.anp-table-width.anp-table-toggle .markdown-rendered table {
     width: var(--anp-table-width-pct);
 }
