--- a/theme.css
+++ b/theme.css
@@ -2930,13 +2930,14 @@ None of the original code was used and the feature was implemented from scratch.
   margin-bottom: 0px;
 }
 .anp-plugin-style-settings-header-color .style-settings-container [data-level="4"].style-settings-container {
-  border: 1px solid rgba(var(--ctp-red), 0.2);
+  border: 1px solid rgba(var(--ctp-mauve), 0.2);
   border-radius: var(--radius-s);
   padding: var(--size-4-2);
   padding-left: var(--size-4-6);
   background-color: rgba(var(--ctp-crust), 0.5);
 }
-.anp-plugin-style-settings-header-color .style-settings-container .setting-item-heading[data-id=anuppuccin-extended-colorschemes-link] {
+.anp-plugin-style-settings-header-color .style-settings-container .setting-item-heading[data-id=anuppuccin-extended-colorschemes-link],
+.anp-plugin-style-settings-header-color .style-settings-container .setting-item-heading[data-id=anuppuccin-theme-credits-link] {
   border-bottom-width: 0px !important;
 }
 .anp-plugin-style-settings-header-color .style-settings-container[data-id=anp-rainbow-section-header], .anp-plugin-style-settings-header-color .style-settings-container[data-id=anp-full-rainbow-folder-settings], .anp-plugin-style-settings-header-color .style-settings-container[data-id=anp-simple-rainbow-folder-settings] {
