--- a/src/modules/Features/custom-checkboxes.scss
+++ b/src/modules/Features/custom-checkboxes.scss
@@ -247,7 +247,7 @@ Icons were taken from Font Awesome: https://fontawesome.com/
             background-color: rgba(var(--ctp-crust), 0.2);
             background: rgba(var(--ctp-crust), 0.2);
         }
-        transition: background-color 0.2s;
+        transition: background-color 0.2s, background 0.2s;
     }
 }
 .anp-speech-bubble .is-live-preview {
@@ -264,6 +264,7 @@ Icons were taken from Font Awesome: https://fontawesome.com/
         &.cm-active {
            border-radius: 0;
            --text-normal: rgb(var(--ctp-text));
+            background: rgba(var(--ctp-surface1), 0.4);
         }
     }
 }
