--- a/src/modules/Base/layouts.scss
+++ b/src/modules/Base/layouts.scss
@@ -145,3 +145,9 @@ body.anp-disable-borders {
   height: calc(100% - 6px - var(--anp-card-layout-padding, 0)*2);
   margin: auto;
 }
+.anp-bg-fix,
+.anp-bg-fix .workspace,
+.anp-bg-fix .app-container,
+.anp-bg-fix .horizontal-main-container {
+    background-color: var(--tab-container-background);
+}
