--- a/src/modules/Core/style-settings.scss
+++ b/src/modules/Core/style-settings.scss
@@ -307,15 +307,6 @@ settings:
         level: 2
         collapsed: true
     -
-        id: anp-header-toggle
-        title: Toggle to enable custom header
-        type: class-toggle
-    - 
-        id: anp-header-font
-        title: Heading Font
-        type: variable-text
-        default: Noto Serif
-    -
         id: anp-header-color-toggle
         title: Toggle to enable custom header colors
         type: class-toggle
@@ -333,12 +324,17 @@ settings:
         step: 2
         default: 20
         format: px
-    - 
-        id: anp-header-size-value
-        title: Header font sizes
+    -
+        id: anp-h1-header
+        title: H1 settings
         type: heading
-        level: 4
-        collapsed: false
+        level: 3
+        collapsed: true
+    -
+        id: h1-font
+        title: H1 font family
+        type: variable-text
+        default: Noto Serif
     - 
         id: h1-size
         title: H1 Size
@@ -347,12 +343,160 @@ settings:
         default: 2
         format: em
     - 
+        id: h1-weight
+        title: H1 weight
+        type: variable-number
+        default: 700
+    - 
+        id: h1-line-height
+        title: H1 line height
+        type: variable-number
+        default: 1.2
+    - 
+        id: anp-h1-color-custom
+        title: H1 color
+        type: class-select
+        allowEmpty: true
+        default: anp-h1-red
+        options:
+            - 
+                label: Rosewater
+                value: anp-h1-rosewater
+            - 
+                label: Flamingo
+                value: anp-h1-flamingo
+            - 
+                label: Pink
+                value: anp-h1-pink
+            - 
+                label: Mauve
+                value: anp-h1-mauve
+            - 
+                label: Red
+                value: anp-h1-red
+            - 
+                label: Maroon
+                value: anp-h1-maroon
+            - 
+                label: Peach
+                value: anp-h1-peach
+            - 
+                label: Yellow
+                value: anp-h1-yellow
+            - 
+                label: Green
+                value: anp-h1-green
+            - 
+                label: Teal
+                value: anp-h1-teal
+            - 
+                label: Sky
+                value: anp-h1-sky
+            - 
+                label: Sapphire
+                value: anp-h1-sapphire
+            - 
+                label: Blue
+                value: anp-h1-blue
+            - 
+                label: Lavender
+                value: anp-h1-lavender
+    -
+        id: anp-h1-divider
+        title: H1 divider
+        type: class-toggle
+    -
+        id: anp-h2-header
+        title: H2 settings
+        type: heading
+        level: 3
+        collapsed: true
+    -
+        id: h2-font
+        title: H2 font family
+        type: variable-text
+        default: Noto Serif
+    - 
         id: h2-size
         title: H2 Size
         description: Size unit is em
         type: variable-number
         default: 1.6
         format: em
+    - 
+        id: h2-weight
+        title: H2 weight
+        type: variable-number
+        default: 600
+    - 
+        id: h2-line-height
+        title: H2 line height
+        type: variable-number
+        default: 1.2
+    - 
+        id: anp-h2-color-custom
+        title: H2 color
+        type: class-select
+        allowEmpty: true
+        default: anp-h2-peach
+        options:
+            - 
+                label: Rosewater
+                value: anp-h2-rosewater
+            - 
+                label: Flamingo
+                value: anp-h2-flamingo
+            - 
+                label: Pink
+                value: anp-h2-pink
+            - 
+                label: Mauve
+                value: anp-h2-mauve
+            - 
+                label: Red
+                value: anp-h2-red
+            - 
+                label: Maroon
+                value: anp-h2-maroon
+            - 
+                label: Peach
+                value: anp-h2-peach
+            - 
+                label: Yellow
+                value: anp-h2-yellow
+            - 
+                label: Green
+                value: anp-h2-green
+            - 
+                label: Teal
+                value: anp-h2-teal
+            - 
+                label: Sky
+                value: anp-h2-sky
+            - 
+                label: Sapphire
+                value: anp-h2-sapphire
+            - 
+                label: Blue
+                value: anp-h2-blue
+            - 
+                label: Lavender
+                value: anp-h2-lavender
+    -
+        id: anp-h2-divider
+        title: H2 divider
+        type: class-toggle
+    -
+        id: anp-h3-header
+        title: H3 settings
+        type: heading
+        level: 3
+        collapsed: true
+    -
+        id: h3-font
+        title: H3 font family
+        type: variable-text
+        default: Noto Serif
     - 
         id: h3-size
         title: H3 Size
@@ -361,12 +505,160 @@ settings:
         default: 1.37
         format: em
     - 
+        id: h3-weight
+        title: H3 weight
+        type: variable-number
+        default: 600
+    - 
+        id: h3-line-height
+        title: H3 line height
+        type: variable-number
+        default: 1.3
+    - 
+        id: anp-h3-color-custom
+        title: H3 color
+        type: class-select
+        allowEmpty: true
+        default: anp-h3-green
+        options:
+            - 
+                label: Rosewater
+                value: anp-h3-rosewater
+            - 
+                label: Flamingo
+                value: anp-h3-flamingo
+            - 
+                label: Pink
+                value: anp-h3-pink
+            - 
+                label: Mauve
+                value: anp-h3-mauve
+            - 
+                label: Red
+                value: anp-h3-red
+            - 
+                label: Maroon
+                value: anp-h3-maroon
+            - 
+                label: Peach
+                value: anp-h3-peach
+            - 
+                label: Yellow
+                value: anp-h3-yellow
+            - 
+                label: Green
+                value: anp-h3-green
+            - 
+                label: Teal
+                value: anp-h3-teal
+            - 
+                label: Sky
+                value: anp-h3-sky
+            - 
+                label: Sapphire
+                value: anp-h3-sapphire
+            - 
+                label: Blue
+                value: anp-h3-blue
+            - 
+                label: Lavender
+                value: anp-h3-lavender
+    -
+        id: anp-h3-divider
+        title: H3 divider
+        type: class-toggle
+    -
+        id: anp-h4-header
+        title: H4 settings
+        type: heading
+        level: 3
+        collapsed: true
+    -
+        id: h4-font
+        title: H4 font family
+        type: variable-text
+        default: Noto Serif
+    - 
         id: h4-size
         title: H4 Size
         description: Size unit is em
         type: variable-number
         default: 1.25
         format: em
+    - 
+        id: h4-weight
+        title: H4 weight
+        type: variable-number
+        default: 600
+    - 
+        id: h4-line-height
+        title: H4 line height
+        type: variable-number
+        default: 1.4
+    - 
+        id: anp-h4-color-custom
+        title: H4 color
+        type: class-select
+        allowEmpty: true
+        default: anp-h4-teal
+        options:
+            - 
+                label: Rosewater
+                value: anp-h4-rosewater
+            - 
+                label: Flamingo
+                value: anp-h4-flamingo
+            - 
+                label: Pink
+                value: anp-h4-pink
+            - 
+                label: Mauve
+                value: anp-h4-mauve
+            - 
+                label: Red
+                value: anp-h4-red
+            - 
+                label: Maroon
+                value: anp-h4-maroon
+            - 
+                label: Peach
+                value: anp-h4-peach
+            - 
+                label: Yellow
+                value: anp-h4-yellow
+            - 
+                label: Green
+                value: anp-h4-green
+            - 
+                label: Teal
+                value: anp-h4-teal
+            - 
+                label: Sky
+                value: anp-h4-sky
+            - 
+                label: Sapphire
+                value: anp-h4-sapphire
+            - 
+                label: Blue
+                value: anp-h4-blue
+            - 
+                label: Lavender
+                value: anp-h4-lavender
+    -
+        id: anp-h4-divider
+        title: H4 divider
+        type: class-toggle
+    -
+        id: anp-h5-header
+        title: H5 settings
+        type: heading
+        level: 3
+        collapsed: true
+    -
+        id: h5-font
+        title: H5 font family
+        type: variable-text
+        default: Noto Serif
     - 
         id: h5-size
         title: H5 Size
@@ -375,12 +667,149 @@ settings:
         default: 1.12
         format: em
     - 
+        id: h5-weight
+        title: H5 weight
+        type: variable-number
+        default: 600
+    - 
+        id: h5-line-height
+        title: H5 line height
+        type: variable-number
+        default: 1.5
+    - 
+        id: anp-h5-color-custom
+        title: H5 color
+        type: class-select
+        allowEmpty: true
+        default: anp-h5-lavender
+        options:
+            - 
+                label: Rosewater
+                value: anp-h5-rosewater
+            - 
+                label: Flamingo
+                value: anp-h5-flamingo
+            - 
+                label: Pink
+                value: anp-h5-pink
+            - 
+                label: Mauve
+                value: anp-h5-mauve
+            - 
+                label: Red
+                value: anp-h5-red
+            - 
+                label: Maroon
+                value: anp-h5-maroon
+            - 
+                label: Peach
+                value: anp-h5-peach
+            - 
+                label: Yellow
+                value: anp-h5-yellow
+            - 
+                label: Green
+                value: anp-h5-green
+            - 
+                label: Teal
+                value: anp-h5-teal
+            - 
+                label: Sky
+                value: anp-h5-sky
+            - 
+                label: Sapphire
+                value: anp-h5-sapphire
+            - 
+                label: Blue
+                value: anp-h5-blue
+            - 
+                label: Lavender
+                value: anp-h5-lavender
+    -
+        id: anp-h5-divider
+        title: H5 divider
+        type: class-toggle
+    -
+        id: anp-h6-header
+        title: H6 settings
+        type: heading
+        level: 3
+        collapsed: true
+    -
+        id: h6-font
+        title: H6 font family
+        type: variable-text
+        default: Noto Serif
+    - 
         id: h6-size
         title: H6 Size
         description: Size unit is em
         type: variable-number
         default: 1.12
         format: em
+    - 
+        id: h6-weight
+        title: H6 weight
+        type: variable-number
+        default: 600
+    - 
+        id: h6-line-height
+        title: H6 line height
+        type: variable-number
+        default: 1.5
+    - 
+        id: anp-h6-color-custom
+        title: H6 color
+        type: class-select
+        allowEmpty: true
+        default: anp-h6-mauve
+        options:
+            - 
+                label: Rosewater
+                value: anp-h6-rosewater
+            - 
+                label: Flamingo
+                value: anp-h6-flamingo
+            - 
+                label: Pink
+                value: anp-h6-pink
+            - 
+                label: Mauve
+                value: anp-h6-mauve
+            - 
+                label: Red
+                value: anp-h6-red
+            - 
+                label: Maroon
+                value: anp-h6-maroon
+            - 
+                label: Peach
+                value: anp-h6-peach
+            - 
+                label: Yellow
+                value: anp-h6-yellow
+            - 
+                label: Green
+                value: anp-h6-green
+            - 
+                label: Teal
+                value: anp-h6-teal
+            - 
+                label: Sky
+                value: anp-h6-sky
+            - 
+                label: Sapphire
+                value: anp-h6-sapphire
+            - 
+                label: Blue
+                value: anp-h6-blue
+            - 
+                label: Lavender
+                value: anp-h6-lavender
+    -
+        id: anp-h6-divider
+        title: H6 divider
+        type: class-toggle
     - 
         id: anp-layout-header
         title: Layout
@@ -403,6 +832,10 @@ settings:
     - 
         id: anp-disable-borders
         title: Disable borders
+        type: class-toggle
+    - 
+        id: anp-bg-fix
+        title: Background fix for applying colors
         type: class-toggle
     - 
         id: anp-layout-card
