--- a/src/modules/Note/tables.scss
+++ b/src/modules/Note/tables.scss
@@ -57,4 +57,6 @@
 }
 .anp-table-width.anp-table-toggle .markdown-rendered table {
     width: var(--anp-table-width-pct);
+    margin-left: calc(50% - var(--anp-table-width-pct)/2);
+    margin-right: calc(50% - var(--anp-table-width-pct)/2);
 }
