--- a/theme.css
+++ b/theme.css
@@ -2464,10 +2464,16 @@ span[alt=anp-embed] .markdown-embed .markdown-embed-title, .anp-embed-toggle .ma
 }
 
 .anp-h1-divider .markdown-rendered h1,
+.anp-h1-divider .HyperMD-header-1,
 .anp-h2-divider .markdown-rendered h2,
+.anp-h2-divider .HyperMD-header-2,
 .anp-h3-divider .markdown-rendered h3,
+.anp-h3-divider .HyperMD-header-3,
 .anp-h4-divider .markdown-rendered h4,
+.anp-h4-divider .HyperMD-header-4,
 .anp-h5-divider .markdown-rendered h5,
+.anp-h5-divider .HyperMD-header-5,
+.anp-h6-divider .HyperMD-header-6,
 .anp-h6-divider .markdown-rendered h6 {
   border-bottom: var(--hr-thickness) solid var(--background-modifier-border);
 }
@@ -2507,8 +2513,13 @@ span[alt=anp-embed] .markdown-embed .markdown-embed-title, .anp-embed-toggle .ma
   margin-block-end: var(--anp-header-margin-value);
 }
 
-.anp-header-divider.anp-header-toggle .markdown-preview-view h1, .anp-header-divider.anp-header-toggle .markdown-preview-view h2, .anp-header-divider.anp-header-toggle .markdown-preview-view h3, .anp-header-divider.anp-header-toggle .markdown-preview-view h4, .anp-header-divider.anp-header-toggle .markdown-preview-view h5, .anp-header-divider.anp-header-toggle .markdown-preview-view h6, .anp-header-divider.anp-header-toggle .is-live-preview h1, .anp-header-divider.anp-header-toggle .is-live-preview h2, .anp-header-divider.anp-header-toggle .is-live-preview h3, .anp-header-divider.anp-header-toggle .is-live-preview h4, .anp-header-divider.anp-header-toggle .is-live-preview h5, .anp-header-divider.anp-header-toggle .is-live-preview h6 {
-  border-bottom: var(--hr-thickness) solid var(--background-modifier-border);
+.anp-editor-font-toggle .markdown-source-view {
+  --h1-font: var(--anp-editor-font);
+  --h2-font: var(--anp-editor-font);
+  --h3-font: var(--anp-editor-font);
+  --h4-font: var(--anp-editor-font);
+  --h5-font: var(--anp-editor-font);
+  --h6-font: var(--anp-editor-font);
 }
 
 /*-Custom hr margins-*/
